----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-28 Michal Cihar  <michal@cihar.com>
    * css/phpmyadmin.css.php: Force <button> to be displayed inline.
    * libraries/common.lib.php: When only_db matches no database, do not show
      any (bug #943626).
    * css/phpmyadmin.css.php: Not .nowrap, but div.nowrap should have zero
      margin/padding.
    * server_privileges.php: No ugly message when editing privileges for
      non-existant database (bug #942357).

2004-04-28 Garvin Hicking <pma@supergarv.de>
    * left.php, main.php, server_databases.php, common.lib.php,
      db_details_common.php: Bug #942296 - Safari can't handle
      location.replace() redirects correctly
    * libraries/tbl_change.js: Restrict calendar to maximum values for
      days/hours/minutes/seconds.
    * tbl_change.php: Bug #913600 - Made tabindex/id of multi-edit table
      unique.
    * left.php, libraries/left.js: Fixed unneeded spacing between items
      and wrong collapsing in nested mode (Bug #943140). Removed
      some debugging non-xhtml tags.
    * css/phpmyadmin.css.php: Added zero margin/padding to nowrap element
      for compatibility to the good old nobr-tag

2004-04-27 Michal Cihar  <michal@cihar.com>
    * calendar.php, libraries/tbl_change.js: Don't reset clock when moving in
      calendar.
    * Almost everything: Be valid XHTML 1.0 (probably still not completely),
      lists items now have padding, so no more magins and <br />'s inside of
      them are needed.
    * main.php, css/phpmyadmin.css.php: Main page now uses lists instead of
      nested tables.
    * libraries/display_tbl.lib.php: Sort query generating now uses parsed
      query (bug #885497).

2004-04-27 Garvin Hicking <pma@supergarv.de>
    * libraries/display_tbl.lib.php: Bug #942392 - Wrapping sort order
      link in a way that the image always belongs to the last word
    * libraries/display_tbl.lib.php: RFE #867284 - Click on result row